84) kernel: net: neigh: disallow transition to NUD_STALE if lladdr is unchanged in neigh_update().<br>
85) kernel: net: ppp: defer netns reference release for ppp channel.<br>
86) kernel: net: netfilter: nf_conntrack_h323: fix off-by-one in DecodeQ931.<br>
87) kernel: net: ipv4: af_inet: make it explicitly non-modular.<br>
88) kernel: net: graceful exit from netif_alloc_netdev_queues().<br>
89) kernel: net: bridge: Fix incorrect re-injection of LLDP packets.<br>
90) kernel: net: ipv6: slight optimization in ip6_dst_gc.<br>
91) kernel: net: ipv6: make ip -6 route get mark xyz work.<br>
92) kernel: net: ipv6: update Destination Cache entries when gateway turn into host.<br>
93) kernel: net: ipv6: fix RTPROT_RA markup of RA routes w/nexthops.<br>
94) kernel: net: ipv6: pass neighbours and dest address into NETEVENT_REDIRECT events.<br>
95) kernel: net: netfilter: h323: Use mod_timer instead of set_expect_timeout.<br>
96) kernel: mm: prevent setting of a value less than 0 to min_free_kbytes.<br>
<br>
<br>
<b>4.6.x</b><br>
1) libwive: add more functions and document it (~50% work end).<br>
2) libnvram: move nvram_load_default and gen_wifi_config from nvram tool (for code reuse).<br>
3) nodogsplash: up to version 2.0.0 (commit: b79e1163).<br>
4) xl2tpd: update to 1.3.8 version (commit: cec1ebe).<br>
5) dropbear: up to 2016.74 version.<br>
6) busybox: apply busybox-1.25.0-ip.patch.<br>
7) coovachilli: include address when complaining about static out of range.<br>
8) build_system: add templates for support SFP router.<br>
9) init.d: add limited support GSW port5 connect to external phy in one rgmii mode.<br>
10) goahead: more usable station list extended info.<br>
11) kernel: ralink_wifi: fix set mcast rate from profile.<br>
12) kernel: net: tcp: increase sysctl_tcp_challenge_ack_limit to 1000 (CVE-2016-5696).<br>
13) kernel: net: netfilter: avoid race with exp->master ct.<br>
<br>
<br>
<br>