@@ -2029,15 +2029,12 @@ VOID Indicate_AMPDU_Packet(RTMP_ADAPTER *pAd, RX_BLK *pRxBlk, UCHAR FromWhichBSS
 	{
 		
 		pBAEntry->nDropPacket++;
-		if (pRxBlk->Ping)
+#ifdef FORCE_ANNOUNCE_CRITICAL_AMPDU
+		if (pRxBlk->CriticalPkt)
 		{
 				INDICATE_LEGACY_OR_AMSDU(pAd, pRxBlk, FromWhichBSSID);
-		} else if (pRxBlk->Arp)
-		{
-				INDICATE_LEGACY_OR_AMSDU(pAd, pRxBlk, FromWhichBSSID);
-		} else if (pRxBlk->Dhcp){
-				INDICATE_LEGACY_OR_AMSDU(pAd, pRxBlk, FromWhichBSSID);
-		} else
+		}else
+#endif /* FORCE_ANNOUNCE_CRITICAL_AMPDU */
 		RELEASE_NDIS_PACKET(pAd, pRxBlk->pRxPacket, NDIS_STATUS_FAILURE);
 
 	}
@@ -2047,15 +2044,12 @@ VOID Indicate_AMPDU_Packet(RTMP_ADAPTER *pAd, RX_BLK *pRxBlk, UCHAR FromWhichBSS
 	{
 		
 		pBAEntry->nDropPacket++;
-		if (pRxBlk->Ping)
+#ifdef FORCE_ANNOUNCE_CRITICAL_AMPDU
+		if (pRxBlk->CriticalPkt)
 		{
 				INDICATE_LEGACY_OR_AMSDU(pAd, pRxBlk, FromWhichBSSID);
-		} else if (pRxBlk->Arp)
-		{
-				INDICATE_LEGACY_OR_AMSDU(pAd, pRxBlk, FromWhichBSSID);
-		} else if (pRxBlk->Dhcp){
-				INDICATE_LEGACY_OR_AMSDU(pAd, pRxBlk, FromWhichBSSID);
-		} else
+		}else
+#endif /* FORCE_ANNOUNCE_CRITICAL_AMPDU */
 		RELEASE_NDIS_PACKET(pAd, pRxBlk->pRxPacket, NDIS_STATUS_FAILURE);
 
 	}
