@@ -350,6 +350,7 @@ EXTRA_CFLAGS += -DRTMP_TEMPERATURE_TX_ALC
 #EXTRA_CFLAGS += -DDMA_BUSY_RESET
 EXTRA_CFLAGS += -DEAPOL_QUEUE_SUPPORT
 EXTRA_CFLAGS += -DDATA_QUEUE_RESERVE
+EXTRA_CFLAGS += -DFORCE_ANNOUNCE_CRITICAL_AMPDU
 ifeq ($(CHIP_MT7620),y)
 EXTRA_CFLAGS += -DMULTI_INF_SUPPORT
 endif
