@@ -6110,7 +6110,7 @@ BOOLEAN RTMPCheckEtherType(
 	OUT PUCHAR pQueIdx,
 	OUT PUCHAR pWcid);
 
-#ifdef RTMP_RXPACKET_CLASSIFY
+#ifdef FORCE_ANNOUNCE_CRITICAL_AMPDU
 VOID RTMP_RxPacketClassify(
 	IN RTMP_ADAPTER *pAd,
 	IN RX_BLK *pRxBlk,
